# newt

./: .gitignore  .plan  Cargo.toml
drawing/: Cargo.toml
drawing/src/: backend.rs  lib.rs  resource_table.rs  typesetting.rs
drawing/src/backend/: gpu_resource_table.rs  mod.rs  shape_pipeline.rs
drawing/src/backend/pipelines/: glyph_pipeline.rs  mask_pipeline.rs  mod.rs  shape_pipeline.rs
gen-syntax/: Cargo.toml  cargo  err1  err2  test  test1  test2
gen-syntax/src/: main.rs  parse.rs  semantic.rs  tokens.rs
host/: Cargo.toml
host/src/: layout.rs  main.rs  newt_render.rs  typesetting.rs
host/src/newt_render/: attachments.rs  pipelines.rs
host/src/newt_render/pipelines/: boxes.rs  glyphs.rs
lang/: newt-syntax.md  runtime.md
lang/Notepad/: App.newt  CursorReducers.newt  Store.newt
newtc/: Cargo.toml
newtc/approvals/tokenizer/: constants.tokens.approved  constants.tokens.newt  identifiers.tokens.approved  identifiers.tokens.newt  keywords.tokens.approved  keywords.tokens.newt  operators.tokens.approved  operators.tokens.newt  tombstone_does_not_end_tokenizing.tokens.approved  tombstone_does_not_end_tokenizing.tokens.newt
newtc/src/: main.rs  parse.rs
newtc/src/featurez/: driver.rs  mod.rs  runtime.rs
newtc/src/featurez/cursor/: cursor.rs  mod.rs  tests.rs
newtc/src/featurez/grammar/: expr.rs  mod.rs  stmt.rs
newtc/src/featurez/newtypes/: mod.rs
newtc/src/featurez/parse/: marker.rs  mod.rs  parse_event.rs  parser.rs  tests.rs
newtc/src/parse/: mod.rs  tokens.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
tools/: approve.ps1
(+67 files in other folders)
